Correct typo login and logout in youtube.html

--- a/google-api/youtube/youtube.html
+++ b/google-api/youtube/youtube.html
@@ -38,7 +38,7 @@
     </head>
     <body>
         
-<div class="book" data-github="nattachart/google-api" data-level="1" data-basepath=".." data-revision="1397090065768">
+<div class="book" data-github="nattachart/google-api" data-level="1" data-basepath=".." data-revision="1397091005912">
     <div class="book-header">
     <!-- Actions Left -->
     <a href="https://github.com/nattachart/google-api" target="_blank" class="btn pull-left"><i class="fa fa-github-alt"></i></a>
@@ -125,7 +125,7 @@
 <p>This step is going to get credentials that represent your application. There are many types of applications that can use Google APIs as mentioned <a href="https://developers.google.com/accounts/docs/OAuth2" target="_blank">here</a>. It assumes that you have already created a project in <a href="https://console.developers.google.com/project" target="_blank">here</a> already.</p>
 <p>Your application can be classified as an installed application, which is neither a web application, client-side application, nor device application. Therefore, when you go to get the credentials (client ID and client secret) by going into your project in Google -&gt; APIs &amp; auth -&gt; Credentials, then click CREATE NEW CLIENT ID and choose &quot;Installed application&quot;. You can also consult <a href="https://developers.google.com/console/help/" target="_blank">here</a>.</p>
 <p>Then you will see Client ID and Client secret under &quot;Client ID for native application&quot;. You can copy these two to replace &quot;Enter ...&quot; in <strong>client_secrets.json</strong> in the directory <strong>resources</strong> in <a href="../code/youtube">here</a>.</p>
-<h4 id="log-in-and-log-out">Log-in and Log-out</h4>
+<h4 id="login-and-logout">Login and Logout</h4>
 <p>You can use the following <strong>Auth</strong> class to let your application&#39;s users log in and out using their Google accounts. The code with examples is <a href="../code/youtube">here</a>. You may also find its Java document <a href="../doc/Auth.html">here</a>.</p>
 <h4 id="libraries-required">Libraries Required</h4>
 <ul>
