--- a/google-api/youtube/youtube.html
+++ b/google-api/youtube/youtube.html
@@ -38,7 +38,7 @@
     </head>
     <body>
         
-<div class="book" data-github="nattachart/google-api" data-level="1" data-basepath=".." data-revision="1397091754481">
+<div class="book" data-github="nattachart/google-api" data-level="1" data-basepath=".." data-revision="1397092235174">
     <div class="book-header">
     <!-- Actions Left -->
     <a href="https://github.com/nattachart/google-api" target="_blank" class="btn pull-left"><i class="fa fa-github-alt"></i></a>
@@ -126,7 +126,7 @@
 <p>Your application can be classified as an installed application, which is neither a web application, client-side application, nor device application. Therefore, when you go to get the credentials (client ID and client secret) by going into your project in Google -&gt; APIs &amp; auth -&gt; Credentials, then click CREATE NEW CLIENT ID and choose &quot;Installed application&quot;. You can also consult <a href="https://developers.google.com/console/help/" target="_blank">here</a>.</p>
 <p>Then you will see Client ID and Client secret under &quot;Client ID for native application&quot;. You can copy these two to replace &quot;Enter ...&quot; in <strong>client_secrets.json</strong> in the directory <strong>resources</strong> in <a href="https://github.com/nattachart/google-api/tree/master/code/youtube" target="_blank">here</a>.</p>
 <h4 id="login-and-logout">Login and Logout</h4>
-<p>You can use the following <strong>Auth</strong> class to let your application&#39;s users log in and out using their Google accounts. The code with examples is <a href="../code/youtube">here</a>. You may also find its Java document <a href="https://github.com/nattachart/google-api/tree/master/code/youtube/doc/Auth.html" target="_blank">here</a>.</p>
+<p>You can use the following <strong>Auth</strong> class to let your application&#39;s users log in and out using their Google accounts. The code with examples is <a href="https://github.com/nattachart/google-api/tree/master/code/youtube" target="_blank">here</a>. You may also find its Java document <a href="../code/youtube/doc/Auth.html">here</a>.</p>
 <h4 id="libraries-required">Libraries Required</h4>
 <ul>
 <li><a href="https://code.google.com/p/google-api-java-client/wiki/Setup#Download_Library_with_Dependencies" target="_blank">google-api-java-client-1.17.0-rc.zip</a></li>
