Added links for debugging tutorials to General

--- a/itcs208-2-2013-projects/general/general.html
+++ b/itcs208-2-2013-projects/general/general.html
@@ -38,7 +38,7 @@
     </head>
     <body>
         
-<div class="book" data-github="nattachart/itcs208-2-2013-projects" data-level="4" data-basepath=".." data-revision="1397154425848">
+<div class="book" data-github="nattachart/itcs208-2-2013-projects" data-level="4" data-basepath=".." data-revision="1397175847013">
     <div class="book-header">
     <!-- Actions Left -->
     <a href="https://github.com/nattachart/itcs208-2-2013-projects" target="_blank" class="btn pull-left"><i class="fa fa-github-alt"></i></a>
@@ -177,6 +177,11 @@
 <li><a href="http://docs.oracle.com/javase/tutorial/java/package/packages.html" target="_blank">http://docs.oracle.com/javase/tutorial/java/package/packages.html</a></li>
 <li><a href="http://www.jarticles.com/package/package_eng.html" target="_blank">http://www.jarticles.com/package/package_eng.html</a></li>
 <li><a href="http://www.tutorialspoint.com/java/java_packages.htm" target="_blank">http://www.tutorialspoint.com/java/java_packages.htm</a></li>
+</ul>
+<h2 id="how-to-debug-programs">How to Debug Programs</h2>
+<ul>
+<li><a href="http://www.vogella.com/tutorials/EclipseDebugging/article.html" target="_blank">In eclipse</a></li>
+<li><a href="http://cobweb.cs.uga.edu/~shoulami/sp2009/cs1301/tutorial/NetBeansDebuggerTutorial/NetBeansDebuggerTutorial.htm" target="_blank">In NetBean</a></li>
 </ul>
 
                     
