Added instruction to turn off debug mode in ytd2, and changed Auth.java so that it deletes all credentials

--- a/itcs208-2-2013-projects/youtube/downloader.html
+++ b/itcs208-2-2013-projects/youtube/downloader.html
@@ -40,7 +40,7 @@
     </head>
     <body>
         
-<div class="book" data-github="nattachart/itcs208-2-2013-projects" data-level="1.2" data-basepath=".." data-revision="1397444996321">
+<div class="book" data-github="nattachart/itcs208-2-2013-projects" data-level="1.2" data-basepath=".." data-revision="1397489716223">
     <div class="book-header">
     <!-- Actions Left -->
     <a href="https://github.com/nattachart/itcs208-2-2013-projects" target="_blank" class="btn pull-left"><i class="fa fa-github-alt"></i></a>
@@ -184,6 +184,7 @@
 <li><a href="http://sourceforge.net/p/ytd2/code/HEAD/tree/ytd2/" target="_blank">This</a> is its source code.</li>
 <li>Find a part in the code that does the download and use it.</li>
 <li>The libraries used (.jar files) are in <code>runytd2.jar</code>. Just extract the file and get them.</li>
+<li>In <code>JFCMainClient.java</code>, at line 125, change <strong>bDEBUG</strong>&#39;s value to <strong>false</strong>.</li>
 </ul>
 
                     
